@@ -52,6 +52,49 @@
               </execution>
             </executions>
           </plugin>
+          <plugin>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
+              <execution>
+                <phase>prepare-package</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <configuration>
+                  <target>
+                    <taskdef classname="com.oracle.appbundler.AppBundlerTask" classpath="${project.basedir}/target/stage/bundler.jar" name="bundleapp"></taskdef>
+                    <bundleapp identifier="org.pentaho.reporting.designer.ReportDesigner" displayname="Pentaho Report Designer" mainclassname="org.pentaho.commons.launcher.Launcher" icon="${project.basedir}/src/main/resources/mac/Contents/Resources/pentaho_reporting.icns" name="Pentaho Report Designer" outputdirectory="${project.basedir}/target/stage/report-designer" shortversion="${project.version}">
+                      <classpath file="${stage.dir.designer}/launcher.jar"></classpath>
+                      <option value="-Dapple.laf.useScreenMenuBar=true"></option>
+                      <option value="-Dosx.app.root.dir=$APP_ROOT"></option>
+                      <option value="-Xms1024m"></option>
+                      <option value="-Xmx2048m"></option>
+                      <option value="-XX:PermSize=128m"></option>
+                      <option value="-XX:MaxPermSize=256m"></option>
+                    </bundleapp>
+                    <copy todir="${app.mac.dir}">
+                      <fileset dir="${stage.dir.designer}">
+                        <exclude name="launcher.jar"></exclude>
+                        <exclude name="Pentaho Report Designer.app/"></exclude>
+                        <exclude name="*.bat"></exclude>
+                        <exclude name="*.sh"></exclude>
+                      </fileset>
+                    </copy>
+                    <loadfile property="bundle.document.types" srcFile="${project.basedir}/src/main/resources/mac/Contents/BundleDocumentTypes.txt"></loadfile>
+                    <replaceregexp file="${stage.dir}/report-designer/Pentaho Report Designer.app/Contents/Info.plist" match="&lt;/dict>\s*&lt;/plist>" replace="${bundle.document.types}"></replaceregexp>
+                    <copy file="${project.basedir}/src/main/resources/mac/Contents/Resources/Java/launcher.properties" todir="${app.mac.dir}/Contents/Java/"></copy>
+                  </target>
+                </configuration>
+              </execution>
+            </executions>
+            <dependencies>
+              <dependency>
+                <groupId>com.oracle</groupId>
+                <artifactId>appbundler</artifactId>
+                <version>1.0</version>
+              </dependency>
+            </dependencies>
+          </plugin>
         </plugins>
       </build>
     </profile>
